# sochat

./: .gitignore  Cargo.toml
client/: .gitignore  Cargo.toml  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
client/lib/: main.dart
client/lib/service/: conversation.dart  rust_service.dart
client/lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
client/lib/src/rust/api/: api.dart  service.dart
client/lib/src/rust/api/types/: id.dart  message.dart
client/lib/state/: conversation_state.dart
client/lib/utils/: padding.dart
client/lib/widgets/: app.dart  home.dart
client/lib/widgets/chat_window/: chat_window.dart
client/lib/widgets/chat_window/message_bar/: message_bar.dart  message_text_field.dart
client/lib/widgets/chat_window/message_list/: message_bubble.dart  message_list.dart
client/lib/widgets/chat_window_placeholder/: chat_window_placeholder.dart
client/lib/widgets/side_panel/: side_panel.dart  side_panel_content.dart
client/lib/widgets/side_panel/contact_list/: contact_list.dart
client/lib/widgets/side_panel/contact_list/contact_list_entry/: contact_list_entry.dart
client/lib/widgets/side_panel/new_conversation_tab/: new_conversation_tab.dart
client/linux/: my_application.cc
client/rust_builder/: pubspec.yaml
client/rust_builder/linux/: CMakeLists.txt
client/rust_builder/macos/: rust_lib_client.podspec
client/rust_builder/windows/: CMakeLists.txt
client/src/: actions.rs  api.rs  dispatch.rs  gui.rs  lib.rs  main.rs  state.rs  store.rs  utils.rs
client/src/gui/: message_display_panel.rs  store.rs  text_input_panel.rs
client/src/gui/components/: message_display_panel.rs  side_panel.rs  text_input_panel.rs
client/src/types/: message.rs
client_frb/: Cargo.toml
client_frb/src/: frb_generated.io.rs  frb_generated.rs
client_frb/src/api/: api.rs  mod.rs  service.rs  types.rs
client_frb/src/api/types/: id.rs  message.rs
client_lib/: Cargo.toml
client_lib/src/: http_client.rs  http_utils.rs  lib.rs  message_receiver.rs  server_connection.rs  types.rs
client_lib/src/http_utils/: error.rs
client_service/: Cargo.toml
client_service/src/: lib.rs
client_service/src/types/: message.rs
common/: Cargo.toml
common/src/: cbor.rs  lib.rs  types.rs  utils.rs
common/src/types/: api_params.rs  error.rs  id.rs  message.rs
common/src/types/id/: compact_uuid.rs  message_id.rs  user_id.rs
common/src/utils/: cbor.rs  conversions.rs  serde_adapters.rs  sql.rs
server/: Cargo.toml
server/.sqlx/: query-54b18d9b79be979abb9612435ef6895530a10f379045e94d5cbe884b9804ffd4.json  query-6ad2d0e9128a7205cb3bab0ba24ffe3d5128632c971c9b254f4b22b6f6d20d1e.json  query-d4ff8f9c0ab83faca9c9a0985e98926628b2d8e6adc6b71087bfb945d2cedb72.json
server/migrations/: 20240117041412_create_tables.sql
server/src/: api.rs  db.rs  error.rs  extractors.rs  lib.rs  main.rs  middleware.rs
server/src/api/: db.rs  extractors.rs  state.rs
server/src/api/extractors/: cbor.rs  octet_stream.rs  postcard.rs  utils.rs
server/src/middleware/: tracing.rs
