[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.27.0" }
egui = { version = "0.27.0", features = ["serde"] }
eyre = "0.6.12"
linkify = "0.10.0"
rfd = { version = "0.14.1", default-features = false, features = [
    "tokio",
    "xdg-portal",
] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = { version = "1.0.115", features = ["alloc"] }
tokio = { version = "1.36.0", features = ["full"] }
