[package]
name = "client_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.2"
common = { version = "0.1.0", path = "../common" }
reqwest = { version = "0.12.5", default-features = false, features = [
    "http2",
    "charset",
    "macos-system-configuration",
    "rustls-tls-manual-roots",
    "rustls-tls-webpki-roots",
    "rustls-tls-native-roots",
] }
serde = "1.0.204"
thiserror = "1.0.61"
