[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_with = { version = "^3.7", features = ["base64"] }
sqlx = { version = "0.7.4", features = ["uuid"] }
thiserror = "^1.0"
uuid = { version = "^1.7", features = ["serde"] }
