[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.0"
bytes = { version = "1.6.1", features = ["serde"] }
ciborium = "0.2.2"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_with = { version = "^3.7", features = ["base64"] }
smallvec = { version = "1.13.2", features = ["serde", "union"] }
sqlx = { version = "0.7.4", features = ["uuid"] }
thiserror = "^1.0"
uuid = { version = "^1.7", features = ["serde", "v7"] }
