[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.22.1"
bytes = { version = "1.10.1", features = ["serde"] }
ciborium = "0.2.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.12", features = ["base64"] }
smallvec = { version = "1.15.0", features = ["serde", "union"] }
sqlx = { version = "0.8.3", features = ["uuid"] }
thiserror = "2.0.12"
uuid = { version = "1.16", features = ["serde", "v7"] }
