[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["ws"] }
axum-server = { version = "0.6", features = ["tls-rustls"] }
base64 = "0.22"
bytes = "1.6"
chrono = "0.4"
common = { version = "0.1.0", path = "../common" }
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures-util = "0.3"
itertools = "0.13"
mime = "0.3"
once_cell = "1.19"
postcard = { version = "1.0.8", features = ["use-std"] }
serde = { version = "1", features = ["derive", "alloc", "rc"] }
serde_json = { version = "1", features = ["alloc"] }
serde_with = { version = "3", features = ["base64", "chrono"] }
smallvec = { version = "1.13", features = ["union", "serde", "write", "const_generics"] }
sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["trace"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = "0.3.18"
uuid = { version = "1.8", features = ["v7"] }
