[package]
name = "server"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.3", features = ["ws"] }
axum-server = { version = "0.7.2", features = ["tls-rustls"] }
base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.40"
common = { version = "0.1.0", path = "../common" }
# ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
futures-util = "0.3.31"
itertools = "0.14"
mime = "0.3.17"
postcard = { version = "1.1.1", features = ["use-std"] }
serde = { version = "1.0.219", features = ["derive", "alloc", "rc"] }
serde_json = { version = "1.0.140", features = ["alloc"] }
serde_with = { version = "3.12.0", features = ["base64", "chrono"] }
smallvec = { version = "1.15", features = ["union", "serde", "write", "const_generics"] }
sqlx = { version = "0.8.3", features = ["sqlite", "runtime-tokio"] }
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["full"] }
tokio-stream = "0.1.17"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = "0.3.19"
uuid = { version = "1.16", features = ["v7"] }